adding the about route and changing the styles

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,5 +1,11 @@
 <%- include("header") -%>
-<h2>This is the about Page</h2>
+<h2>About</h2>
+<div>
+  <p>This Project was made by Saqib Shaikh using Node.js and MongoDB</p>
+  <p>
+    Get the source code of this project on
+    <a href="https://github.com/saqib0401/todolist" target="_blank">Github</a>.
+  </p>
+</div>
 
-This is the description of my about page.
 <%- include("footer") -%>
